# hypell

./: .gitignore  README.md  hypell.cabal
app/: Main.hs
config/: example.yaml
docs/: backtesting.md
docs/superpowers/plans/: 2026-03-16-hypell-implementation.md  backtest.md
docs/superpowers/specs/: 2026-03-16-hypell-design.md
examples/: BacktestGrid.hs  SimpleGrid.hs
src/: Hypell.hs
src/Hypell/: Backtest.hs  Config.hs  Engine.hs  Risk.hs  Strategy.hs  Types.hs
src/Hypell/Algo/: Iceberg.hs  TWAP.hs
src/Hypell/Api/: Rest.hs  Signing.hs  WebSocket.hs
src/Hypell/Backtest/: AccountSim.hs  DataLoader.hs  MatchingEngine.hs  Metrics.hs  Runner.hs  Types.hs
src/Hypell/Effect/: Account.hs  AlgoExec.hs  Exchange.hs  Log.hs  MarketData.hs  OrderManager.hs  RiskControl.hs
src/Hypell/Interpreter/: AlgoExec.hs  OrderManager.hs  RiskControl.hs
src/Hypell/Interpreter/Account/: IO.hs  Pure.hs
src/Hypell/Interpreter/Exchange/: IO.hs  Pure.hs
src/Hypell/Interpreter/MarketData/: IO.hs  Pure.hs
test/: Spec.hs
test/Test/Hypell/: AlgoTest.hs  RiskTest.hs  StrategyTest.hs  TypesTest.hs
